[package]
name = "stprobe"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
description = "A fast, ffprobe-like CLI for inspecting local and remote .safetensors files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xyc2016/stprobe"
homepage = "https://github.com/Xyc2016/stprobe"
documentation = "https://docs.rs/stprobe"
keywords = ["safetensors", "cli", "tensor", "inspect"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
safetensors = "0.7"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
